--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,7 @@
    <link href="css/style.css" rel="stylesheet"><!-- DO NOT EDIT THIS LINE. -->
 </head>
 <body>
+  <h1>Ten Principles for Good Design</h1>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
