--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>Ten Principles for Good Design</h1>
+  <h2>by Dieter Rams</h2>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
