--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Ten Principles for Good Design</h1>
   <h2>by Dieter Rams</h2>
+  <h3>Good design…</h3>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
