--- a/site/aesthetic.html
+++ b/site/aesthetic.html
@@ -6,6 +6,11 @@
   <title>Aesthetic</title>
 </head>
 <body>
+  <header>
+    <h1>Ten Principles for Good Design</h1>
+    <h1>by Dieter Rams</h1>
+    <h2>Good design…</h2>
+  </header>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
