--- a/site/index.html
+++ b/site/index.html
@@ -8,9 +8,11 @@
    <link href="css/style.css" rel="stylesheet"><!-- DO NOT EDIT THIS LINE. -->
 </head>
 <body>
-  <h1>Ten Principles for Good Design</h1>
-  <h2>by Dieter Rams</h2>
-  <h3>Good design…</h3>
+  <header>
+    <h1>Ten Principles for Good Design</h1>
+    <h1>by Dieter Rams</h1>
+    <h2>Good design…</h2>
+  </header>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
