Add content to each .html file

--- a/site/detail.html
+++ b/site/detail.html
@@ -26,5 +26,9 @@
       <li><a href="little-design.html">Little Design</a></li>
     </ul>
   </nav>
+  <main>
+    <h3>Is thorough down to the last detail.</h3>
+    <p> Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the consumer.</p>
+  </main>
 </body>
 </html>
