--- a/site/environmentally-friendly.html
+++ b/site/environmentally-friendly.html
@@ -26,5 +26,9 @@
       <li><a href="little-design.html">Little Design</a></li>
     </ul>
   </nav>
+  <main>
+    <h3>Is environmentally friendly.</h3>
+    <p>Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.</p>
+  </main>
 </body>
 </html>
