--- a/site/little-design.html
+++ b/site/little-design.html
@@ -26,5 +26,9 @@
       <li><a href="little-design.html">Little Design</a></li>
     </ul>
   </nav>
+  <main>
+    <h3>Is as little design as possible.</h3>
+    <p>Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.</p>
+  </main>
 </body>
 </html>
