--- a/site/long-lasting.html
+++ b/site/long-lasting.html
@@ -26,5 +26,10 @@
       <li><a href="little-design.html">Little Design</a></li>
     </ul>
   </nav>
+  <main>
+    <h3>Is long-lasting.</h3>
+    <p>It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.
+    </p>
+  </main>
 </body>
 </html>
