--- a/site/product-useful.html
+++ b/site/product-useful.html
@@ -26,5 +26,9 @@
       <li><a href="little-design.html">Little Design</a></li>
     </ul>
   </nav>
+  <main>
+    <h3>Makes a product useful.</h3>
+    <p>A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.</p>
+  </main>
 </body>
 </html>
