--- a/site/understandable.html
+++ b/site/understandable.html
@@ -26,5 +26,9 @@
       <li><a href="little-design.html">Little Design</a></li>
     </ul>
   </nav>
+  <main>
+    <h3>Makes a product understandable.</h3>
+    <p>It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.</p>
+  </main>
 </body>
 </html>
