--- a/site/aesthetic.html
+++ b/site/aesthetic.html
@@ -26,5 +26,9 @@
       <li><a href="little-design.html">Little Design</a></li>
     </ul>
   </nav>
+  <main>
+    <h3>Is aesthetic.</h3>
+    <p>The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.</p>
+  </main>
 </body>
 </html>
