--- a/site/honest.html
+++ b/site/honest.html
@@ -26,5 +26,9 @@
       <li><a href="little-design.html">Little Design</a></li>
     </ul>
   </nav>
+  <main>
+    <h3>Is honest.</h3>
+    <p>It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.</p>
+  </main>
 </body>
 </html>
