--- a/site/innovative.html
+++ b/site/innovative.html
@@ -26,5 +26,9 @@
       <li><a href="little-design.html">Little Design</a></li>
     </ul>
   </nav>
+  <main>
+    <h3>Is innovative.</h3>
+    <p>The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
+  </main>
 </body>
 </html>
