--- a/site/detail.html
+++ b/site/detail.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detail</title>
+  <link href="css/reset.css" rel="stylesheet"><!-- DO NOT EDIT THIS LINE. -->
+  <link href="css/style.css" rel="stylesheet"><!-- DO NOT EDIT THIS LINE. -->
 </head>
 <body>
   <header>
