Add google fonts to .html files

--- a/site/long-lasting.html
+++ b/site/long-lasting.html
@@ -6,6 +6,8 @@
   <title>Long Lasting</title>
   <link href="css/reset.css" rel="stylesheet"><!-- DO NOT EDIT THIS LINE. -->
   <link href="css/style.css" rel="stylesheet"><!-- DO NOT EDIT THIS LINE. -->
+  <link href="https://fonts.googleapis.com/css2?family=Anton" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed" rel="stylesheet">
 </head>
 <body>
   <header>
