Add images to .html files

--- a/site/index.html
+++ b/site/index.html
@@ -30,5 +30,6 @@
       <li><a href="little-design.html">Little Design</a></li>
     </ul>
   </nav>
+<img src="img/dieter-rams.jpg" alt="Picture of Dieter Rams">
 </body>
 </html>
