--- a/site/long-lasting.html
+++ b/site/long-lasting.html
@@ -32,8 +32,9 @@
   </nav>
   <main>
     <h3>Is long-lasting.</h3>
-    <p>It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.
-    </p>
+      <p>It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.
+      </p>
+      <img src="img/long-lasting.jpg" alt="Long Lasting Picture">
   </main>
 </body>
 </html>
