--- a/site/product-useful.html
+++ b/site/product-useful.html
@@ -32,7 +32,8 @@
   </nav>
   <main>
     <h3>Makes a product useful.</h3>
-    <p>A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.</p>
+      <p>A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.</p>
+      <img src="img/product-useful.jpg" alt="Product Useful Picture">
   </main>
 </body>
 </html>
