--- a/site/environmentally-friendly.html
+++ b/site/environmentally-friendly.html
@@ -32,7 +32,8 @@
   </nav>
   <main>
     <h3>Is environmentally friendly.</h3>
-    <p>Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.</p>
+      <p>Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.</p>
+      <img src="img/environmentally-friendly.jpg" alt="Environmentally Friendly Picture">
   </main>
 </body>
 </html>
