--- a/site/honest.html
+++ b/site/honest.html
@@ -32,7 +32,8 @@
   </nav>
   <main>
     <h3>Is honest.</h3>
-    <p>It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.</p>
+      <p>It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.</p>
+      <img src="img/honest.jpg" alt="Honest Picture">
   </main>
 </body>
 </html>
