--- a/site/understandable.html
+++ b/site/understandable.html
@@ -32,7 +32,8 @@
   </nav>
   <main>
     <h3>Makes a product understandable.</h3>
-    <p>It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.</p>
+      <p>It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.</p>
+      <img src="img/understandable.jpg" alt="Understandable Picture">
   </main>
 </body>
 </html>
