--- a/site/unobtrusive.html
+++ b/site/unobtrusive.html
@@ -32,7 +32,8 @@
   </nav>
   <main>
     <h3>Is unobtrusive.</h3>
-    <p>Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user’s self-expression.</p>
+      <p>Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user’s self-expression.</p>
+      <img src="img/unobtrusive.jpg" alt="Unobtrusive Picture">
   </main>
 </body>
 </html>
