--- a/site/aesthetic.html
+++ b/site/aesthetic.html
@@ -30,10 +30,10 @@
       </ul>
     </nav>
   </header>
-  <main>
-    <h3>Is aesthetic.</h3>
-      <p>The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.</p>
-      <img src="img/aesthetic.jpg" alt="Aesthetic Picture">
-  </main>
+    <main>
+        <img src="img/aesthetic.jpg" alt="Aesthetic Picture" class="center">
+      <h3>Is aesthetic.</h3>
+        <p>The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.</p>
+    </main>
 </body>
 </html>
