--- a/site/detail.html
+++ b/site/detail.html
@@ -33,7 +33,7 @@
   <main>
     <h3>Is thorough down to the last detail.</h3>
       <p> Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the consumer.</p>
-      <img src="img/detail.jpg" alt="Detail Picture">
+      <img src="img/detail.jpg" alt="Detail Picture" class="center">
   </main>
 </body>
 </html>
