--- a/site/environmentally-friendly.html
+++ b/site/environmentally-friendly.html
@@ -31,9 +31,9 @@
     </nav>
   </header>
   <main>
+      <img src="img/environmentally-friendly.jpg" alt="Environmentally Friendly Picture" class="center">
     <h3>Is environmentally friendly.</h3>
       <p>Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.</p>
-      <img src="img/environmentally-friendly.jpg" alt="Environmentally Friendly Picture">
   </main>
 </body>
 </html>
