--- a/site/little-design.html
+++ b/site/little-design.html
@@ -33,7 +33,7 @@
   <main>
     <h3>Is as little design as possible.</h3>
       <p>Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.</p>
-      <img src="img/little-design.jpg" alt="Little Design Picture">
+      <img src="img/little-design.jpg" alt="Little Design Picture" class="center">
   </main>
 </body>
 </html>
