--- a/site/index.html
+++ b/site/index.html
@@ -14,6 +14,7 @@
     <h1>Ten Principles for Good Design</h1>
     <h1>by Dieter Rams</h1>
     <h2>Good design…</h2>
+    <img src="img/dieter-rams.jpg" alt="Picture of Dieter Rams" class="center">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -30,6 +31,5 @@
       </ul>
     </nav>
   </header>
-<img src="img/dieter-rams.jpg" alt="Picture of Dieter Rams">
 </body>
 </html>
