--- a/site/long-lasting.html
+++ b/site/long-lasting.html
@@ -34,7 +34,7 @@
     <h3>Is long-lasting.</h3>
       <p>It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.
       </p>
-      <img src="img/long-lasting.jpg" alt="Long Lasting Picture">
+      <img src="img/long-lasting.jpg" alt="Long Lasting Picture" class="center">
   </main>
 </body>
 </html>
