--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed" rel="stylesheet">
 </head>
 <body>
+  <div id="home-header">
   <header>
     <h1>Ten Principles for Good Design</h1>
     <h1>by Dieter Rams</h1>
@@ -31,5 +32,6 @@
       </ul>
     </nav>
   </header>
+</div>
 </body>
 </html>
